--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
       تم تطوير اللعبة باستخدام HTML5 و CSS3 و JavaScript
       <br>
       <br>
-      Developer: Ahmed Essam
+      Developer: Ahmed Essam..
     </div>
   </div>
 
